# touch-grasping-pipeline

./: README.md
bottomup_msgs/: CMakeLists.txt  package.xml
bottomup_msgs/msg/: bottomup_msg.msg
grasping_pipeline/: CMakeLists.txt  package.xml
grasping_pipeline/include/grasping_pipeline/: GraspingPipeline.h
grasping_pipeline/launch/: grasping_pipeline.launch
grasping_pipeline/src/: GraspingPipeline.cpp  GraspingPipelineClient.cpp
ist_grasp_generation_msgs/: CMakeLists.txt  package.xml
ist_grasp_generation_msgs/action/: GenerateGrasps.action  GenerateTrajectories.action  GetGeneratedGrasps.action  Grasping.action
ist_grasp_generation_msgs/srv/: AddObjectCollision.srv  AttachObject.srv  CheckGrasping.srv  GetEvaluatedGrasps.srv  GetGeneratedGrasps.srv  GraspingPointPrediction.srv  InverseKinematics.srv  InverseKinematicsBatch.srv  MotionPlan.srv  MoveGripper.srv  MoveRobot.srv  NewExperiment.srv  ObjectInference.srv
ist_msgs/: CMakeLists.txt  package.xml
ist_msgs/msg/: Action.msg  ActionAffordance.msg  ActionType.msg  ActionVector.msg  ActionablePartData.msg  ActionablePartStatus.msg  ActionableType.msg  BoundingBox.msg  GraspParams.msg  Graspability.msg  GripDirection.msg  GripDistance.msg  GripList.msg  GripPose.msg  GripState.msg  GripTrial.msg  HandPose.msg  HandPosture.msg  HandState.msg  MaterialType.msg  Object.msg  ObjectCategory.msg  ObjectData.msg  ObjectList.msg  ObjectPart.msg  ObjectState.msg  ObjectType.msg  RefinedObjectPointCloud.msg  ShapeType.msg  SizeType.msg  SubsampledPointCloud.msg  SymmetryType.msg  Task.msg  TaskSequence.msg  TaskType.msg
ist_object_details/: CMakeLists.txt  package.xml
moveit_api_test/: CMakeLists.txt  package.xml
moveit_api_test/src/: api_moveit_test.cpp  barrett_mitsubishi_moveit.cpp  mitsubishi_barrett_moveit.cpp  moveit_api_test.cpp  test_moveit.cpp
object_segmentation/: CMakeLists.txt  package.xml
object_segmentation/launch/: object_segmentation.launch
object_segmentation/src/: color_segmentation.cpp
objectrecognition/: CMakeLists.txt  package.xml
objectrecognition/src/ros_objectrecognition_sv/: household_object_detector.cpp  household_object_detector_server.cpp
perception/: CMakeLists.txt  package.xml  package.xml~
perception/launch/: perception.launch
perception/nodes/: detect_objects_server.py
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/action/: DetectObjects.action
perception_msgs/srv/: GetObjectDetails.srv  GetRefinedPointCloud.srv  PoseEstimation.srv
segmentation/: CMakeLists.txt  package.xml
segmentation/launch/: segmentation.launch  tabletop_segmentation.launch
segmentation/src/: marker_generator.cpp  plane_segmentation.cpp  tabletop_segmentation_online_param_up.cpp
touch_evaluated_point/: CMakeLists.txt  package.xml
touch_evaluated_point/launch /: pointsegmentation.launch
touch_evaluated_point/src/: point.cpp
