<?xml version="1.0"?>
<package>
  <name>bottomup_msgs</name>
  <version>0.0.0</version>
  <description>The bottomup_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author>Rui M. H. Pimentel de Figueiredo</author>
  <maintainer email="ruifigueiredo@isr.ist.utl.pt">Rui M. H. Pimentel de Figueiredo</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/bottomup_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--<build_depend>object_recognition_msgs</build_depend>-->
  <build_depend>segmentation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>segmentation</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <!-- run_depend>object_recognition_msgs</run_depend -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>